package strategy.demo2;

/**
 * @Classname FlyAction
 * @Description TODO
 * @Date 2020/3/26 20:47
 * @Author Danrbo
 */

/**
 * 飞行接口
 */
public interface FlyAction {
    void fly();
}
