package strategy.demo2;

/**
 * @Classname SwimAction
 * @Description TODO
 * @Date 2020/3/26 20:50
 * @Author Danrbo
 */
public interface SwimAction {
    void swim();
}
